# cc-launcher

./: .gitattributes  .gitignore  .svnignore  AGENTS.md  BUILD.md  CLAUDE.md  README-中文版.md  README.md  build-macos.command  build.py  dev.py  index.html  package-lock.json  package.json  version.json  vite.config.ts
contracts/: cli-contract.json
docs/: build.md  development-environment-dependencies.md  macOS打包方案.md  依赖检测与安装开发文档.md  (+8 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: app.icns
src-tauri/src/: claude_launcher.rs  cli_capabilities.rs  cli_contract.rs  cli_migration.rs  cli_runtime.rs  codex_config.rs  config_store.rs  dependency_manager.rs  file_transaction.rs  lib.rs  macos_keychain.rs  main.rs  model_fetcher.rs  opencode_config.rs  persistent_state.rs  platform_env.rs  project_manager.rs  registry.rs  session_manager.rs  settings_manager.rs  tab_cli.rs  utils.rs
src-tauri/src/pty/: mod.rs  session.rs
src-tauri/tests/fixtures/cli/: codex-app-server-thread-list.sample.json  codex-capabilities-2026-07-14.json  codex-session-meta.sample.jsonl  opencode-capabilities-1.17.20.json  opencode-debug-scrap-global.sample.json  opencode-debug-scrap.sample.json  opencode-debug-scrap.schema.json  opencode-global-session-list.sample.json  opencode-session-list.sample.json  opencode-session-list.schema.json
src-tauri/tests/fixtures/migration/: interrupted-write.json  legacy-app-state-project-tab.json  legacy-env-configs-unknown-fields.json  legacy-projects-no-cli-kind.json  migrated-projects-default-claude.json  misclassified-cli-projects.json
(+66 files in other folders)
